media query done

--- a/style/colors.scss
+++ b/style/colors.scss
@@ -6,7 +6,7 @@ $gray_1: #6d6875;
 $gray_2: #5c5552;
 $gray_3: #f8edeb;
 $gray_4: #adb5bd;
-$gray_5: #343a40;
+// $gray_5: #343a40;
 $orange_1: #fb8b24;
 $orange_2: #ff7d00;
 $blue_1: #023e8a;
