--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -2,7 +2,7 @@
 @import "collaborate";
 @import "colors";
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 * {
   margin: 0;
@@ -825,6 +825,7 @@ html {
 
     h2 {
       font-size: 40px;
+      font-family: "Courgette", cursive;
       margin-bottom: 20px;
       color: $brown;
     }
